# kickstartmyai

./: .coverage  .gitignore  IMPLEMENTATION_PLAN.md  INSTALLATION_VALIDATION_GUIDE.md  KICKSTARTMYAI_PROGRESS_RECAP.md  Makefile  README.md  VALIDATION_STRATEGY.md  base_structure.txt  comprehensive_test.py  cookiecutter.json  project_structure.txt  pyproject.toml  requirements.txt  safety-report.json  validate_production.py
docs/: PRODUCTION_READINESS.md  (+1 more)
kickstartmyai/templates/{{cookiecutter.project_slug}}/: .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
kickstartmyai/templates/{{cookiecutter.project_slug}}/.github/workflows/: ci-cd.yml  security.yml  test.yml
kickstartmyai/templates/{{cookiecutter.project_slug}}/alembic/: env.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/: __init__.py  main.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/ai/core/: agent.py  memory.py  orchestrator.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/ai/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/ai/services/: __init__.py  chat_service.py  function_calling_service.py  streaming_service.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/ai/tools/: __init__.py  base.py  builtin.py  calculator.py  file_manager.py  file_system.py  registry.py  web_search.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/api/: deps.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/api/middleware/: error_handling.py  logging.py  rate_limiting.py  security.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/api/v1/: api.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/core/: config.py  events.py  exceptions.py  logging_utils.py  unit_of_work.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/core/security/: __init__.py  jwt_handler.py  password.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/crud/: __init__.py  agent.py  conversation.py  execution.py  message.py  user.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/db/: base.py  session.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/models/: __init__.py  agent.py  conversation.py  execution.py  message.py  user.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/monitoring/: health_checks.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/schemas/: __init__.py  agent.py  auth.py  conversation.py  execution.py  message.py  user.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/app/services/: __init__.py  agent_service.py  conversation_service.py  tool_service.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/docker/: Dockerfile.dev  Dockerfile.prod
kickstartmyai/templates/{{cookiecutter.project_slug}}/scripts/database/: init_db.py  migrate.sh  migration_utils.py  test_migration_scripts.py  validate_models.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/scripts/development/: setup-dev.sh
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/environments/prod/: main.tf  variables.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/database/: main.tf  outputs.tf  variables.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/ecs/: main.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/networking/: main.tf  variables.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/redis/: main.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/terraform/modules/secrets/: main.tf  variables.tf
kickstartmyai/templates/{{cookiecutter.project_slug}}/tests/: conftest.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/tests/e2e/: __init__.py  conftest.py  test_user_journeys.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/tests/integration/: test_template_generation.py  test_testing_infrastructure.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/tests/load/: test_performance.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/tests/security/: __init__.py  conftest.py  test_auth_security.py
kickstartmyai/templates/{{cookiecutter.project_slug}}/tests/unit/: test_ai_providers.py  test_api.py  test_auth.py  test_config.py
test-ai-project/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt
test-ai-project/.github/workflows/: test.yml
test-ai-project/alembic/: env.py
test-ai-project/app/: __init__.py  main.py
test-ai-project/app/ai/providers/: gemini.py
test-ai-project/app/ai/services/: __init__.py  embedding_service.py  execution_engine.py
test-ai-project/app/ai/tools/: database.py  registry.py
test-ai-project/app/api/middleware/: cors.py
test-ai-project/app/api/v1/endpoints/: agent_execution.py  base.py  user.py
test-ai-project/app/core/: config.py
test-ai-project/app/core/security/: jwt_handler.py
test-ai-project/app/crud/: message.py
test-ai-project/app/schemas/: __init__.py  auth.py
test-ai-project/app/services/: agent_service.py  tool_service.py
test-ai-project/docker/: Dockerfile.dev  Dockerfile.prod
test-ai-project/scripts/database/: create_db.py  migrate.sh
test-ai-project/scripts/development/: setup-dev.sh
test-ai-project/terraform/environments/prod/: main.tf  variables.tf
test-ai-project/terraform/modules/ecs/: main.tf
test-ai-project/tests/: __init__.py  conftest.py
test-ai-project/tests/integration/test_ai_workflow/: test_complete_ai_pipeline.py
test-ai-project/tests/security/: conftest.py  test_auth_security.py
test-ai-project/tests/unit/: test_auth.py  test_config.py
(+79 files in other folders)
